[FIX] project: fix project share chatter alignment
Versions:
---------
- saas-16.3

Steps to reproduce:
-------------------
- Install Project
- Share the project with editable
- In the portal view, the chatter is misaligned

Issue:
------
- In The portal view, the bottom of the control panel and
  the chatter is not aligned correctly

Cause:
------
- In chatter counter adjustments are not correctly assigned.
  Because of that, chatter is not correctly aligned.

Solution:
---------
- By Changing the bootstrap class of 'padding-bottom'
  the problem will be solved

task-3610483

--- a/addons/project/static/src/project_sharing/components/chatter/chatter.scss
+++ b/addons/project/static/src/project_sharing/components/chatter/chatter.scss
@@ -57,7 +57,7 @@
         .o_portal_chatter {
             .o_portal_chatter_header {
                 padding-top: 1rem;
-                padding-bottom: 1px;
+                padding-bottom: 0.3rem;
             }
 
             .o_portal_chatter_composer, .o_portal_chatter_messages {
